chef/chef-stacktrace.out
Generated at 2017-04-05 17:09:51 +0100
SyntaxError: /root/.chef/cookbooks/firewall/recipes/default.rb:66: syntax error, unexpected ':', expecting keyword_end
protocol : tcp
          ^
/root/.chef/cookbooks/firewall/recipes/default.rb:68: syntax error, unexpected ':', expecting keyword_end
command : allow
         ^
/root/.chef/cookbooks/firewall/recipes/default.rb:72: syntax error, unexpected ':', expecting keyword_end
protocol : tcp
          ^
/root/.chef/cookbooks/firewall/recipes/default.rb:74: syntax error, unexpected ':', expecting keyword_end
command : allow
         ^
/root/.chef/cookbooks/firewall/recipes/default.rb:78: syntax error, unexpected ':', expecting keyword_end
protocol : tcp
          ^
/root/.chef/cookbooks/firewall/recipes/default.rb:80: syntax error, unexpected ':', expecting keyword_end
command : allow
         ^
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/mixin/from_file.rb:30:in `instance_eval'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/mixin/from_file.rb:30:in `from_file'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/cookbook_version.rb:233:in `load_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/run_context.rb:338:in `load_recipe'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/run_context/cookbook_compiler.rb:141:in `block in compile_recipes'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/run_context/cookbook_compiler.rb:138:in `each'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/run_context/cookbook_compiler.rb:138:in `compile_recipes'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/run_context/cookbook_compiler.rb:75:in `compile'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/run_context.rb:187:in `load'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/policy_builder/expand_node_object.rb:97:in `setup_run_context'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/client.rb:511:in `setup_run_context'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/client.rb:281:in `run'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application.rb:295:in `block in fork_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application.rb:283:in `fork'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application.rb:283:in `fork_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application.rb:248:in `block in run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/local_mode.rb:44:in `with_server_connectivity'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application.rb:236:in `run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application/client.rb:464:in `sleep_then_run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application/client.rb:451:in `block in interval_run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application/client.rb:450:in `loop'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application/client.rb:450:in `interval_run_chef_client'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application/client.rb:434:in `run_application'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application.rb:59:in `run'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/lib/chef/application/solo.rb:226:in `run'
/opt/chefdk/embedded/lib/ruby/gems/2.3.0/gems/chef-12.18.31/bin/chef-solo:25:in `<top (required)>'
/usr/bin/chef-solo:57:in `load'
/usr/bin/chef-solo:57:in `<main>'